<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Authorization">


    <TextView
        android:id="@+id/heading_txt1"
        style="@style/thor"
        android:text="@string/Authorization" />

    <EditText
        android:id="@+id/number_phone"
        style="@style/enter"
        android:layout_below="@+id/heading_txt1"
        android:hint="@string/Hing_1"
        android:inputType="phone"
        android:maxLength="11"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/car_number"
        style="@style/enter"
        android:layout_below="@+id/number_phone"
        android:hint="@string/Hing_2"
        android:inputType="textAutoComplete"
        android:maxLength="6"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/entrance_bt"
        style="@style/menu_clc"
        android:layout_below="@+id/car_number"
        android:layout_marginTop="60sp"
        android:background="@color/pic_color_1"
        android:onClick="clc_enter"
        android:text="@string/entrance" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_alignParentLeft="true"
        android:background="@color/pic_color_1"
        android:contentDescription="aw"
        android:onClick="clc_Back_2"
        app:srcCompat="@drawable/direction_left_arrow_icon_218884" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_alignParentRight="true"
        android:contentDescription="aw"
        android:background="@color/pic_color_1"
        android:onClick="clc_home_2"
        app:srcCompat="@drawable/house_home_icon_218857" />

    <CheckedTextView
        android:id="@+id/checkedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entrance_bt"
        android:layout_marginTop="10sp"
        android:minHeight="48dp"
        android:onClick="clc_registration"
        android:text="@string/registration"
        android:textAlignment="center" />

</RelativeLayout>