<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar">

    <TextView
        android:id="@+id/heading_txt4"
        style="@style/thor"
        android:text="@string/Calendar" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_alignParentLeft="true"
        android:background="@color/pic_color_1"
        android:contentDescription="aw"
        android:onClick="clc_Back_5"
        app:srcCompat="@drawable/direction_left_arrow_icon_218884" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_alignParentRight="true"
        android:contentDescription="aw"
        android:background="@color/pic_color_1"
        android:onClick="clc_home_5"
        app:srcCompat="@drawable/house_home_icon_218857" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading_txt4" />



    <TextView
        android:id="@+id/textData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calendarView"
        android:text="" />

    <EditText
        android:id="@+id/txt_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textData"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Middle_name"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_note"
        android:text="@string/Save" />




</RelativeLayout>